feat(gateway): remove useless basket schema in the swagger
