# services/gateway/src/lib/swagger/swagger-output.json
@@ -429,20 +429,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "params",
-            "in": "params",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "userId": {
-                  "type": "number",
-                  "example": 1
-                }
-              }
-            }
           }
         ],
         "responses": {
@@ -1829,7 +1815,7 @@
     "/api/delivery-person/{id}": {
       "get": {
         "tags": [
-          "DeliveryPerson"
+          "Delivery"
         ],
         "description": "",
         "parameters": [
@@ -1851,7 +1837,7 @@
       },
       "put": {
         "tags": [
-          "DeliveryPerson"
+          "Delivery"
         ],
         "description": "",
         "parameters": [
@@ -1894,7 +1880,7 @@
       },
       "delete": {
         "tags": [
-          "DeliveryPerson"
+          "Delivery"
         ],
         "description": "",
         "parameters": [
@@ -1918,7 +1904,7 @@
     "/api/delivery-person": {
       "get": {
         "tags": [
-          "DeliveryPerson"
+          "Delivery"
         ],
         "description": "",
         "responses": {
@@ -1932,7 +1918,7 @@
       },
       "post": {
         "tags": [
-          "DeliveryPerson"
+          "Delivery"
         ],
         "description": "",
         "parameters": [
@@ -2890,7 +2876,7 @@
     "/api/stock/outcomes/by-restaurant/{id}": {
       "post": {
         "tags": [
-          "StockPerson"
+          "Stock"
         ],
         "description": "",
         "parameters": [
